test/modules/vass/use-a-Reflection-function.good
use-a-Reflection-function.chpl:6: error: cannot find module or 'enum' 'numFields' for 'use' statement
